--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -305,7 +305,7 @@ hr {
     font-family: "Josefin Sans", sans-serif;
     text-transform: capitalize;
     padding: 25px 38px !important;
-    color: #fff;
+    color: #fff !important;
     cursor: pointer;
     display: inline-blockc !important;
     font-size: 16px;
